; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-lang.c_desc_one_bound.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-lang.c_desc_one_bound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value = type { i32 }

@bound_name = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [33 x i8] c"Bad GNAT array descriptor bounds\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.value* (%struct.value*, i32, i32)* @desc_one_bound to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.value* @desc_one_bound(%struct.value* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.value*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.value* %0, %struct.value** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** @bound_name, align 8
  %8 = load i32, i32* %5, align 4
  %9 = mul nsw i32 2, %8
  %10 = load i32, i32* %6, align 4
  %11 = add nsw i32 %9, %10
  %12 = sub nsw i32 %11, 2
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %7, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.value* @value_struct_elt(%struct.value** %4, i32* null, i32 %15, i32* null, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  ret %struct.value* %16
}

declare dso_local %struct.value* @value_struct_elt(%struct.value**, i32*, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
